--- a/README.me
+++ b/README.me
@@ -1,11 +1,8 @@
-=======================
-Simple Monitor
-=======================
+# Simple Monitor
 
 Simple monitor extension for GNOME. Shows a widget on the top panel with the percentage of CPU and memory used. If clicked, shows the ten most cpu-intensive processes and the ten most memory-consuming processes.
 
-Installation
----------------
+## Installation
 
 To install, clone repository and copy it in ~/.local/config/gnome-shell/extensions/simple-monitor@fcaballero.github.io
 
